--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -34,16 +34,16 @@
     text-align: center;
     max-width: 100%;
 }
-.headerWrapper .bg-header{
+.headerWrapper .bgheader{
     padding: 8px 0px;
 }
-.headerWrapper .bg-header p{
+.headerWrapper .bgheader p{
     color: #fff;
     font-size: 12px;
     font-weight: 700;
 }
 .headerWrapper{
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
 }
 .headerWrapper .header{
     width: 100%;
