--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -8,7 +8,8 @@
 .header{
     display: flex;
     width: 100%;
-    margin-top: 4px;
+    top: 0px;
+    
 
 }
 /* @media(min-width: 1300px){
@@ -30,9 +31,9 @@
     background: transparent;
 }
 .bg-header{
-    background-color: #8e00a3;
-    text-align: center;
-    max-width: 100%;
+    background-color: #8e00a3 !important;
+    text-align: center !important;
+    max-width: 100% !important;
 }
 .headerWrapper .bgheader{
     padding: 8px 0px;
@@ -48,6 +49,7 @@
 .headerWrapper .header{
     width: 100%;
     height: auto;
+    top: 0px;
 }
 
  .row{
@@ -402,15 +404,17 @@ nav .list-item a button:hover{
 
 }
 
-.locationModal .MuiPaper-elevation{
-    padding: 25px;
-    width: 100%;
-    justify-content: center;
-    max-width: 450px;
+.MuiPaper-elevation{
+    padding: 25px !important;
+    width: 100% !important;
+    justify-content: center !important;
+    position: relative !important;
+
 
 }
-.MuiPaper-elevation{
-    position: relative;
+ .locationModal .MuiPaper-elevation{
+   
+    max-width: 450px;
 }
 
  .close-location{
