--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -125,7 +125,7 @@
   margin: 0%;
 }
 
-.productItem {
+.product-row .productItem {
   margin-right: 5px;
   display: block;
   margin-top: 10px;
@@ -138,11 +138,10 @@
   overflow: hidden;
   position: relative;
   transition: all 0.2s;
-  width: 100%;
   padding: 0px;
 }
 
-.productItem .imgwrapper {
+.product-row .productItem .imgwrapper {
   background: #fff;
   border-radius: 7px;
   border-bottom-left-radius: 0;
@@ -155,7 +154,7 @@
   margin-top: 0px;
   margin-right: 14px;
 }
-.imgwrapper img {
+.product-row .imgwrapper img {
   max-width: 100%;
   max-height: 100%;
   width: auto;
