--- a/frontend/src/pages/Home/Home.css
+++ b/frontend/src/pages/Home/Home.css
@@ -116,6 +116,7 @@
 
 .product-row {
   width: 1150px;
+  
 }
 
 .imgwrapper {
@@ -127,7 +128,6 @@
 
 .product-row .productItem {
   margin-right: 5px;
-  display: block;
   margin-top: 10px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   justify-content: center;
@@ -651,3 +651,21 @@
 .styles a{
   text-decoration: none;
 }
+.imageupload{
+  width: 100%;
+  height: 100%;
+}
+
+.infoo{
+  background: whitesmoke !important;
+}
+
+.sliderFlex{
+  display: flex !important;
+  flex-direction: row !important;
+}
+.flexImages{
+  display: flex !important;
+  flex-direction: row !important;
+}
+
